Added the IsPublished Field

--- a/NewsFeedApplication/Web.config
+++ b/NewsFeedApplication/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-NewsFeedApplication-20150701210256;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-NewsFeedApplication-20150701210256.mdf" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="data source=PRASANJEET;initial catalog=NewsFeedUsers;user id=sa;password=bapasitaram" providerName="System.Data.SqlClient" />
-    <add name="NewsFeedUsersEntities" connectionString="metadata=res://*/Models.Entities.NewsFeedUserModel.csdl|res://*/Models.Entities.NewsFeedUserModel.ssdl|res://*/Models.Entities.NewsFeedUserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PRASANJEET;initial catalog=NewsFeedUsers;user id=sa;password=bapasitaram;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="NewsFeedUsersEntities" connectionString="metadata=res://*/Models.Entities.NewsFeedUserModel.csdl|res://*/Models.Entities.NewsFeedUserModel.ssdl|res://*/Models.Entities.NewsFeedUserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PRASANJEET;initial catalog=NewsFeedUsers;user id=sa;password=bapasitaram;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="NewsFeedEntities" connectionString="metadata=res://*/Models.Entities.NewsFeedModel.csdl|res://*/Models.Entities.NewsFeedModel.ssdl|res://*/Models.Entities.NewsFeedModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PRASANJEET;initial catalog=NewsFeed;user id=sa;password=bapasitaram;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
@@ -54,7 +54,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <modules>
-      <add name="UploadModule" type="RTE.UploadModule,RichTextEditor"/>
+      <add name="UploadModule" type="RTE.UploadModule,RichTextEditor" />
     </modules>
   </system.webServer>
   <runtime>
