Added the Business Logic for the services

--- a/NewsFeedServices/Web.config
+++ b/NewsFeedServices/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-NewsFeedServices-20150704120022;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-NewsFeedServices-20150704120022.mdf" />
+    <add name="NewsFeedEntities" connectionString="metadata=res://*/Models.NewsFeedModel.csdl|res://*/Models.NewsFeedModel.ssdl|res://*/Models.NewsFeedModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PRASANJEET;initial catalog=NewsFeed;user id=sa;password=bapasitaram;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -19,7 +20,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="None" />
     <pages>
