--- a/NewsFeedServices/NewsFeedServices.csproj
+++ b/NewsFeedServices/NewsFeedServices.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Components\INewsFeed.cs" />
     <Compile Include="Components\NewsFeed.cs" />
     <Compile Include="Controllers\Customer.cs" />
     <Compile Include="Controllers\HomeController.cs" />
